src/objects/Zuora__Subscription__c.object
<CustomObject>
    <description>A subscription is a product or service that has recurring charges, such as a monthly flat fee or charges based on usage. Subscriptions can also include one-time charges, such as activation fees.</description>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Text(Zuora__Account__r.Region__c)</formula>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Subscription__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Zuora__Account__r.Id, Zuora__Account__r.Name) &amp; &quot; / &quot; &amp; HYPERLINK(&quot;/&quot; &amp; Id, Name)</formula>
        <label>Account / Subscription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillCase__c</fullName>
        <label>(FC) Bill Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <formula>Zuora__CustomerAccount__r.Zuora__AccountNumber__c</formula>
        <label>Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CARR__c</fullName>
        <formula>Zuora__MRR__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CQRR__c</fullName>
        <formula>Zuora__MRR__c * 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CQRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FC_Booking_Month__c</fullName>
        <formula>CASE(Month( DateValue(Zuora__OriginalCreated_Date__c ))
,1, &quot;Jan&quot;
,2, &quot;Feb&quot;
,3, &quot;Mar&quot;
,4, &quot;Apr&quot;
,5, &quot;May&quot;
,6, &quot;Jun&quot;
,7, &quot;Jul&quot;
,8, &quot;Aug&quot;
,9, &quot;Sep&quot;
,10, &quot;Oct&quot;
,11, &quot;Nov&quot;
,&quot;Dec&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) Booking Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Contract_Term_Type__c</fullName>
        <formula>IF(TEXT(Zuora__TermSettingType__c) == &quot;TERMED&quot; &amp;&amp; !Zuora__AutoRenew__c, &quot;Termed&quot;,
            &quot;Evergreen&quot;)</formula>
        <label>(FC) Contract Term Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Eligible_to_Cancel_End_Date__c</fullName>
        <label>(FC) Eligible to Cancel End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FC_Eligible_to_Cancel_Start_Date__c</fullName>
        <label>(FC) Eligible to Cancel Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FC_Eligible_to_Cancel_in_31_60_Days__c</fullName>
        <formula>FC_Eligible_to_Cancel_Start_Date__c - TODAY() &gt;= 31 &amp;&amp;
FC_Eligible_to_Cancel_Start_Date__c - TODAY() &lt;= 60</formula>
        <label>(FC) Eligible to Cancel in 31-60 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Eligible_to_Cancel_in_61_90_Days__c</fullName>
        <formula>FC_Eligible_to_Cancel_Start_Date__c - TODAY() &gt;= 61 &amp;&amp;
FC_Eligible_to_Cancel_Start_Date__c - TODAY() &lt;= 90</formula>
        <label>(FC) Eligible to Cancel in 61-90 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Eligible_to_Cancel_in_over_90_Days__c</fullName>
        <formula>FC_Eligible_to_Cancel_Start_Date__c - TODAY() &gt; 90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(FC) Eligible to Cancel in over 90 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Eligible_to_Cancel_within_30_Days__c</fullName>
        <formula>(FC_Eligible_to_Cancel_Start_Date__c - TODAY() &gt; 0 &amp;&amp;
FC_Eligible_to_Cancel_Start_Date__c - TODAY() &lt;= 30) || (NOT(FC_Eligible_to_be_Cancelled__c) &amp;&amp; (TODAY() &gt; FC_Eligible_to_Cancel_End_Date__c))</formula>
        <label>(FC) Eligible to Cancel within 30 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Eligible_to_be_Cancelled__c</fullName>
        <formula>FC_Eligible_to_Cancel_Start_Date__c - TODAY() &lt;= 0 &amp;&amp; TODAY() &lt;= FC_Eligible_to_Cancel_End_Date__c</formula>
        <label>(FC) Eligible to be Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Latest_Charge_Effective_Date__c</fullName>
        <label>(FC) Latest Charge Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FC_One_Time_Charge_Count__c</fullName>
        <label>(FC) One-Time Charge Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Opp_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; OpportunityID__c</formula>
        <label>(FC) Opp Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Override_Eligible_to_Cancel_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(FC) Override Eligible to Cancel Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Recurring_Charge_Count__c</fullName>
        <label>(FC) Recurring Charge Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstOpenInvoiceDate__c</fullName>
        <label>First Open Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HasNonAnnualRecurring__c</fullName>
        <label>HasNonAnnualRecurring</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Reportable__c</fullName>
        <formula>(Term_Status__c = &apos;Active&apos; || Term_Status__c = &apos;Future&apos; || 
	(Term_Status__c = &apos;Cancelled&apos; &amp;&amp; TODAY() &lt;=  Zuora__SubscriptionEndDate__c )
)
 
&amp;&amp; NOT(
	ISPICKVAL(Zuora__TermSettingType__c, &apos;TERMED&apos;) 
	&amp;&amp; Term_Length_Months__c &lt; 12
	&amp;&amp; Zuora__MRR__c &lt;= 0
	) 
&amp;&amp; NOT(CONTAINS(Name, &apos;aging&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reportable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_to_Zuora__c</fullName>
        <formula>HYPERLINK( $Setup.FC_Zuora_Client_Settings__c.Zuora_UI_Endpoint_Base_URL__c &amp; &quot;/apps/Subscription.do?method=view&amp;id=&quot; &amp; Zuora__External_Id__c , &quot;Link to Zuora&quot;, &quot;_blank&quot;)</formula>
        <label>Link to Zuora</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <label>Opportunity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID (deprecated)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Link__c</fullName>
        <formula>IF(NOT(ISBLANK( Quote_SFDC_ID__c )),
     HYPERLINK(&quot;/&quot; &amp; Quote_SFDC_ID__c, &quot;Link To Quote&quot;),
     &quot;&quot;)</formula>
        <label>Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_SFDC_ID__c</fullName>
        <label>Quote_SFDC_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region field populated from Opportunity</description>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Length_Months__c</fullName>
        <formula>(YEAR( Zuora__TermEndDate__c ) * 12 + MONTH(Zuora__TermEndDate__c)) +((IF(MONTH(Zuora__TermEndDate__c) == MONTH( Zuora__TermStartDate__c ) || DAY(Zuora__TermEndDate__c) == DAY(Zuora__TermStartDate__c), 0, 1)) - (YEAR(Zuora__TermStartDate__c) * 12 + MONTH(Zuora__TermStartDate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Length (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Status__c</fullName>
        <formula>IF(Zuora__Status__c == &quot;Cancelled&quot; &amp;&amp; Zuora__CancelledDate__c &gt;= TODAY(),
            &quot;Active&quot;, /* future dated cancellations */
            IF(Zuora__Status__c == &quot;Cancelled&quot;,&quot;Cancelled&quot;,
            IF(FC_One_Time_Charge_Count__c &gt; 0 &amp;&amp; FC_Recurring_Charge_Count__c == 0,
            IF(Zuora__TermStartDate__c &gt; TODAY(), &quot;Future&quot;,
            IF(FC_Latest_Charge_Effective_Date__c &lt; TODAY(), &quot;Expired&quot;,
            &quot;Active&quot;
            )
            ),
            IF(FC_Recurring_Charge_Count__c &gt; 0,
            IF(Zuora__TermStartDate__c &gt; TODAY(),
            &quot;Future&quot;,
            IF(TEXT(Zuora__TermSettingType__c) == &quot;TERMED&quot;,
            IF(Zuora__TermEndDate__c &lt; TODAY(), &quot;Expired&quot;, &quot;Active&quot;),
            Zuora__Status__c
            )
            ),
            Zuora__Status__c
            )
            )
            )
)</formula>
        <label>Term Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoRenew?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zuora__CancelledDate__c</fullName>
        <description>The date of the Amendment object that canceled the subscription.</description>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__ContractAcceptanceDate__c</fullName>
        <description>This is the date on which the contract was accepted by the customer, and will trigger charges that have their trigger event set to Upon Customer Acceptance.</description>
        <label>Contract Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__ContractEffectiveDate__c</fullName>
        <description>This is the date on which the contract becomes effective, and will trigger charges that have their trigger event set to Upon Contract Effective.</description>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__CurrentTermPeriodType__c</fullName>
        <description>The period type for the current subscription term.</description>
        <inlineHelpText>The period type of the current subscription term.</inlineHelpText>
        <label>Current Term Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__CurrentTerm__c</fullName>
        <label>Current Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CustomerAccount__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__InitialTermPeriodType__c</fullName>
        <description>The period type for the first subscription term.</description>
        <inlineHelpText>The period type for the first subscription term.</inlineHelpText>
        <label>Initial Term Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__InitialTerm__c</fullName>
        <label>Initial Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__InvoiceOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Owner</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Subscriptions (Invoice Owner)</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__MRR__c</fullName>
        <label>CMRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__NextChargeDate__c</fullName>
        <label>Next Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__NextRenewalDate__c</fullName>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__OpportunityCloseDate__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__OpportunityName__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__OriginalCreatedDate__c</fullName>
        <description>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</description>
        <inlineHelpText>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</inlineHelpText>
        <label>Original Created Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__OriginalCreated_Date__c</fullName>
        <description>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</description>
        <inlineHelpText>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</inlineHelpText>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__OriginalId__c</fullName>
        <description>The original ID of this subscription.</description>
        <label>Original Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__PreviousSubscriptionId__c</fullName>
        <description>The subscription ID immediately prior to the current subscription.</description>
        <label>Previous Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__QuoteBusinessType__c</fullName>
        <label>Quote Business Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__QuoteNumber__c</fullName>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__QuoteType__c</fullName>
        <label>Quote Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__RenewalTermPeriodType__c</fullName>
        <description>The period type for the subscription renewal term.</description>
        <inlineHelpText>The period type for the subscription renewal term.</inlineHelpText>
        <label>Renewal Term Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__RenewalTerm__c</fullName>
        <label>Renewal Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ServiceActivationDate__c</fullName>
        <description>This is when the service was activated, and will trigger charges that have their trigger event set to Upon Service Activation.</description>
        <label>Service Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionEndDate__c</fullName>
        <description>This is when the subscription ends. This is always equal to term end date, unless the subscription has been cancelled. If the subscription has been cancelled, this is set to the cancellation date.</description>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionNumber__c</fullName>
        <externalId>true</externalId>
        <label>Subscription Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__SubscriptionStartDate__c</fullName>
        <description>The date when the subscription term starts. This is equal to the term start date if the subscription is on its initial term. Otherwise, it is the original term start date if the subscription has renewed.</description>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__TCV__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__TermEndDate__c</fullName>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__TermSettingType__c</fullName>
        <description>Case sensitive. Denotes if a subscription is evergreen (has no end date or term length) or has a term.</description>
        <label>Term Setting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TERMED</fullName>
                </value>
                <value>
                    <fullName>EVERGREEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zuora__TermStartDate__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__Zuora_Id__c</fullName>
        <description>The Zuora Id (external primary key) of this Subscription.</description>
        <inlineHelpText>The Zuora Id (external primary key) of this Subscription.</inlineHelpText>
        <label>Zuora Id (Deprecated)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzMark__c</fullName>
        <label>zzMark</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Zuora__Account__c</columns>
        <columns>Zuora__CustomerAccount__c</columns>
        <columns>Zuora__TermSettingType__c</columns>
        <columns>CQRR__c</columns>
        <columns>CARR__c</columns>
        <columns>Zuora__OriginalCreatedDate__c</columns>
        <columns>Zuora__Status__c</columns>
        <columns>Zuora__Version__c</columns>
        <columns>Term_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>reportable</fullName>
        <columns>NAME</columns>
        <columns>Is_Reportable__c</columns>
        <columns>Term_Status__c</columns>
        <columns>Zuora__Status__c</columns>
        <columns>Zuora__SubscriptionEndDate__c</columns>
        <columns>Zuora__MRR__c</columns>
        <columns>Zuora__InitialTerm__c</columns>
        <columns>Zuora__TermSettingType__c</columns>
        <filterScope>Everything</filterScope>
        <label>reportable</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>